added aruco prefab and support to place new markers on map

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -51,11 +51,13 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+     <Compile Include="Assets\aruco.cs" />
      <Compile Include="Assets\Scripts\CalcPath.cs" />
      <Compile Include="Assets\Scripts\Compshader.cs" />
      <Compile Include="Assets\Scripts\CustomCommand.cs" />
      <Compile Include="Assets\Scripts\FPSDisplay.cs" />
      <Compile Include="Assets\Scripts\LocalNavMeshBuilder.cs" />
+     <Compile Include="Assets\Scripts\Marker.cs" />
      <Compile Include="Assets\Scripts\move.cs" />
      <Compile Include="Assets\Scripts\MoveToClickPoint.cs" />
      <Compile Include="Assets\Scripts\NavMeshSourceTag.cs" />
